# neural-lam-experiments

./: .gitignore  README.md  generate_experiments.py  generate_plots.py  pyproject.toml  runall.sh  study_parameters.yaml
baseline-X0/: run.sh
baseline-X0/saved_models/train-graph_lam-4x2-11_27_20-5304/: last.ckpt  min_val_loss.ckpt
baseline-X0/wandb/: latest-run
baseline-X0/wandb/offline-run-20241127_200209-99lapspk/: run-99lapspk.wandb
baseline-X0/wandb/offline-run-20241127_200209-99lapspk/files/: wandb-metadata.json
baseline-X0/wandb/offline-run-20241127_200322-c4tap3il/: run-c4tap3il.wandb
baseline-X0/wandb/offline-run-20241127_200322-c4tap3il/files/: requirements.txt  test_mae.csv  test_rmse.csv  wandb-metadata.json
experiments/experiment_0000/: run.sh
experiments/experiment_0001/: run.sh
experiments/experiment_0002/: run.sh
reference-X0/: run.sh
templates/: run.sh.tpl
