[project]
name = "neural-lam-experiments"
version = "0.1.0"
description = "structured experimental studies with neural-lam"
authors = [
    {name = "Leif Denby", email = "lcd@dmi.dk"},
]
dependencies = [
    "jinja2>=3.1.4",
    "neural-lam @ git+https://github.com/mllam/neural-lam@c1f706c29542d770ed49e910f8b9bd5caff1fdec",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=4.0.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
